# mazzeh_chin

./: README.md  docker-compose.yml  pyproject.toml  template.env
app/: main.py
app/admin/: main.py
app/admin/dals/: admin_dal.py
app/admin/decorator/: admin_accessibility.py
app/admin/helpers/: add_admin.py  authenticate_admin.py  get_admin_by_id.py  get_all_admins.py  get_current_admin.py  get_hash_password.py  remove_admin.py  verify_password.py
app/admin/models/: admin.py
app/admin/routes/: login.py  management.py
app/admin/schemas/: admin_role_type.py  get.py  login.py  management.py
app/core/: config.py  constant_variables.py
app/core/schemas/: environment.py
app/db/: base.py  session.py
app/util/crud/: base.py
scripts/: format
