[tool.poetry]
name = "mazzeh-chin"
version = "0.1.0"
description = ""
authors = ["mr.khavari <mr.khavari.n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.2"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
